<resources>
    <string name="app_name">AppKeDoorStep</string>
    <string name="str_welcome">Welcome</string>
    <string name="login_text">Please sign in to your account</string>
    <string name="otp_text">Please sign in to continue</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="str_keep_me_log_in">Keep me logged in</string>
    <string name="recover_password">Recover Password</string>
    <string name="login_dashboard">Continue</string>
    <string name="login_verify">Verify</string>
    <string name="no_account">No account ?</string>
    <string name="sign_up">
        <u>Sign up now</u>
    </string>
    <string name="test_text">Test User</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_save">Save</string>
    <string name="str_profile_completion">Profile Completion Progress:</string>
    <string name="str_details">Details</string>
    <string name="str_member_code">Member Code</string>
    <string name="str_company_address">Company Address</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="str_recover_password">Recover your Password</string>
    <string name="str_recover_password_desc">Please enter your User ID and a reset link will be sent to your registered
        email address.
    </string>
    <string name="str_sap_code">SAP Code</string>
    <string name="str_send_recovery_code">Send Recovery Link</string>
    <string name="str_recover_password_forgot">Please create a new password to login to dashboard</string>
    <string name="str_old_password">New Password</string>
    <string name="str_new_password">Confirm New Password</string>
    <string name="str_set_password">Set Password</string>
    <string name="str_dashboard">Home</string>
    <string name="str_report">Report</string>
    <string name="str_customer_visit">Customer Visit</string>
    <string name="str_about_programme">About the Programme</string>
    <string name="str_about_programme_detail">The Advantage program is a centralized Dealer Relationship Program that
        simplifies the...
    </string>
    <string name="filled_bullet">\u25CF</string>
    <string name="str_tab_about_point_primary">Primary Pts/Offtake</string>
    <string name="str_tab_about_point_secondary">Secondary Pts/Offtake</string>
    <string name="str_pcr">PCR</string>
    <string name="str_point_range_type">Points Range / Tyre</string>
    <string name="str_point_range_type_car">80 to 60</string>
    <string name="str_type_offtake_qurt">Tyre Offtake Quarterly</string>
    <string name="str_tweleve_thirteen">12” - 13”</string>
    <string name="str_fourteen_sixteen">14” - 16”</string>
    <string name="str_etc"><![CDATA[(Ranger, UX1, Touring & all 17 inches)]]></string>
    <string name="str_total_point">Total Points</string>
    <string name="str_quater">Earned Points in 2019 - 20</string>
    <string name="str_provisional">*These Points are provisional. They will get added to your total earned points at the
        end of Q3 if you are eligible.
    </string>
    <string name="str_quater_provisional">Provisional Earned Points in Q2 \n(Jul - Sep)</string>
    <string name="str_offtek">Offtake</string>
    <string name="str_points">Points</string>
    <string name="str_truck">Truck</string>
    <string name="str_two_wheeler">2 / 3 WHEELER</string>
    <string name="str_point_till_date">Points Month Till Date</string>
    <string name="str_date_demo">Jul’19</string>
    <string name="quater_four">Q4</string>
    <string name="quater_three">Q3</string>
    <string name="quater_two">Q2</string>
    <string name="quater_one">Q1</string>
    <string name="str_month">Month</string>
    <string name="str_total_offrek">Total Offtake</string>
    <string name="str_premioum">Premium</string>
    <string name="str_consitency">Consistency</string>
    <string name="str_slab_jump">Slab Jump</string>
    <string name="str_schemes">Schemes</string>
    <string name="str_approve">Approvals</string>
    <string name="warranty_registration">Warranty Registration</string>
    <string name="customer_details">CUSTOMER DETAILS</string>
    <string name="first_name">First Name <font color='#ffdf42'>*</font></string>
    <string name="last_name">Last Name <font color='#ffdf42'>*</font></string>
    <string name="first_name_not">First Name</string>
    <string name="last_name_not">Last Name</string>
    <string name="vehicle_type">Type</string>
    <string name="state">State <font color='#ffdf42'>*</font></string>
    <string name="city">City <font color='#ffdf42'>*</font></string>
    <string name="reg_no">Registration Number</string>
    <string name="reg_year">Registration Year</string>
    <string name="veh__meter_reading">Vehicle Meter Reading</string>
    <string name="veh_cat">Vehicle Category</string>
    <string name="avg_mon_running_km">Average Monthly Usage</string>
    <string name="veh_details">VEHICLE DETAILS</string>
    <string name="pro_det">PRODUCT DETAILS</string>
    <string name="type_description">Tyre Description</string>
    <string name="no_of_tyre_purchase">No. of Tyres Purchased</string>
    <string name="next">Next</string>
    <string name="vech_type">Select your customer’s vehicle type</string>
    <string name="sel_from_exis">Select from existing vehicle</string>
    <string name="search_hint">Search State</string>
    <string name="cus_state">Select customer’s vehicle registration state <font color='#ffdf42'>*</font></string>
    <string name="cus_city">Select customer’s vehicle registration City <font color='#ffdf42'>*</font></string>
    <string name="sel_model">Select the model of your customer’s vehicle <font color='#ffdf42'>*</font></string>
    <string name="sel_var">Select the variant of your customer’s vehicle </string>
    <string name="cus_met_read">Enter your customer’s vehicle meter reading <font color='#ffdf42'>*</font>
    </string>
    <string name="cus_mon_km">Enter your customer’s average monthly usage.</string>
    <string name="sel_tyre">Select the tyres customer is buying <font color='#ffdf42'>*</font></string>
    <string name="str_warranty_title">WARRANTY REGISTRATION</string>
    <string name="cus_mob_no">Please Provide your customer’s mobile number and we’ll send a verification code to your
        customer.
    </string>
    <string name="otp_num">Enter the OTP sent to +91 9923487689.</string>
    <string name="str_send_again">
        <u>Send Again</u>
    </string>
    <string name="warranty_register">Register</string>
    <string name="str_welcome_new">Welcome to the brand new</string>
    <string name="str_about_jkadvantage">ABOUT JK Advantage</string>
    <string name="str_lorep_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
        Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley
        of type and scrambled it to make a type specimen book.
    </string>
    <string name="str_next">Next</string>
    <string name="str_profile_missing_text">Looks like some of your details are missing. Please fill them to enjoy the
        benefits!
    </string>
    <string name="str_business_name">Business Name</string>
    <string name="str_business_name_exm"><![CDATA[Standard Tyres & Batteries]]></string>
    <string name="str_business_address">Business Address</string>
    <string name="str_request_edit">REQUEST TO EDIT</string>
    <string name="str_email_address">Email Address <font color='#ffdf42'>*</font></string>
    <string name="str__address">Address <font color='#ffdf42'>*</font></string>
    <string name="str_email_only">Email <font color='#ffdf42'>*</font></string>
    <string name="str_select_product_man">Select Product <font color='#ffdf42'>*</font>
    </string>
    <string name="str_select_quantity_man">Select Quantity <font color='#ffdf42'>*</font>
    </string>
    <string name="str_select_payment_mode">Select Payment Mode <font color='#ffdf42'>*</font>
    </string>
    <string name="str_email_address_hint">Email Address

    </string>
    <string name="str_business_name_star">Business Name <font color='#ffdf42'>*</font>
    </string>
    <string name="str_owner_phone_number">Owner’s Phone Number <font color='#ffdf42'>*</font>
    </string>
    <string name="str_owner_name">Owner’s Name <font color='#ffdf42'>*</font>
    </string>
    <string name="str_gst_number_man">GST Number <font color='#ffdf42'>*</font></string>
    <string name="str_pan_number_man">PAN Number <font color='#ffdf42'>*</font></string>
    <string name="str_owner_phone_number_not_mandatory">Owner’s Phone Number</string>
    <string name="str_gst_number">GST Number</string>
    <string name="str_pan_number">PAN Number</string>
    <string name="str_primary_contact_detail">Primary Contact Details</string>
    <string name="str_other_business_detail">Other Business Details</string>
    <string name="str_alternative_contact_person">Alternate Contact Person</string>
    <string name="str_designation">Designation</string>
    <string name="str_alternative_contact_number">Alternate Contact Number</string>
    <string name="str_whatsapp_number">Whatsapp Number <font color='#ffdf42'>*</font>
    </string>
    <string name="str_whatsapp_number_not_mandatory">Whatsapp Number</string>
    <string name="str_social_detail">Social Details</string>
    <string name="str_birthdate">Birth Date <font color='#ffdf42'>*</font>
    </string>
    <string name="str_birthdate_not_mandatory">Birthdate</string>
    <string name="str_anniversary_date">Anniversary Date</string>
    <string name="str_Facebook_page">Facebook Page</string>
    <string name="str_instagram_page">Instagram Page</string>
    <string name="str_website">Website</string>
    <string name="str_done">Done</string>
    <string name="str_email_address_not_mandatory">Email Address</string>
    <string name="str_request_detail">Request Details</string>
    <string name="str_request_detail_for_enter">
        Tell us what you want to edit with reason. We will verify details and update database soon. We expect this to
        complete in a few days however we will try it as soon as possible.
    </string>
    <string name="str_request_to_edit">REQUEST TO EDIT DETAILS</string>
    <string name="str_send">Send</string>
    <string name="str_two_three_wheeler">2 and 3 WHEELER</string>
    <string name="str_point_range_type_two_wheeler">20 to 100</string>
    <string name="str_lcv_scv">SCV / LCV</string>
    <string name="str_point_range_type_scv_lcv">20 to 400</string>
    <string name="str_truck_bus">TRUCKS / BUS</string>
    <string name="str_farm">FARM</string>
    <string name="str_point_range_type_farm">85 to 250</string>
    <string name="str_point_range_type_bus_truck">60 to 120</string>
    <string name="str_point_range_tyre">Points Range / Tyre</string>
    <string name="str_points_pcr">80 to 260</string>
    <string name="user_id">User ID</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="otp_code">OTP code</string>
    <string name="str_ytd">YTD</string>
    <string name="str_qtd">QTD</string>
    <string name="str_mtd">MTD</string>
    <string name="str_april_to_july">Apr - Jul’19</string>
    <string name="str_ytr_value">4,14,100</string>
    <string name="str_reward_demo">Your opportunity to Redeem Points just opened up.</string>
    <string name="str_reward_demo_one">Your opportunity to Redeem Points just opened up.\n You
        have 
    </string>
    <string name="str_logout">Logout</string>
    <string name="str_logout_from_all_device">Do you want to Logout?</string>
    <string name="str_logout_from_device">Logout from all device</string>
    <string name="str_new_version">New Version Available</string>
</resources>