<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/sixteen_dp"
    app:cardCornerRadius="@dimen/ten_dp"
    app:cardElevation="@dimen/two_dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@drawable/dialog_background"

        android:orientation="vertical">

        <com.walkins.aapkedoorstep.custom.BoldHeavyTextView

            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:layout_marginTop="@dimen/sixteen_dp"
            android:text="@string/str_logout"
            android:textSize="@dimen/sixteen_sp"
            android:textStyle="bold" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/thirteen_dp"
            android:background="@color/strock_color" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:layout_marginTop="@dimen/twenty_dp"
            android:layout_marginRight="@dimen/twenty_dp"
            android:orientation="vertical">


            <com.walkins.aapkedoorstep.custom.NormalTextView
                android:id="@+id/tv_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_logout_from_all_device"
                android:textColor="@color/text_color1"
                android:textSize="@dimen/fourteen_sp" />


            <CheckBox
                android:id="@+id/chkLogOutFromAllDevice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-6dp"
                android:layout_marginLeft="-6dp"
                android:layout_marginTop="@dimen/ten_dp"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/str_logout_from_device"
                android:textColor="@color/text_color1" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/twenty_four_dp"
                android:layout_marginBottom="@dimen/twenty_four_dp"
                android:orientation="horizontal"
                android:weightSum="2">


                <com.walkins.aapkedoorstep.custom.BoldButton
                    android:id="@+id/btn_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/eight_dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_corner_button_white"
                    android:text="@string/str_cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/light_gray_text_color" />

                <com.walkins.aapkedoorstep.custom.BoldButton
                    android:id="@+id/btn_save"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/eight_dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_corner_button_yellow"
                    android:text="@string/str_logout"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>